--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ geckodriver.log
 virtualenv
 __pycache__
 *.pyc
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
