--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ future==0.16.0
 idna==2.7
 jmespath==0.9.4
 pathspec==0.5.9
+postgres==2.2.2
+psycopg2==2.7.4
+psycopg2-binary==2.8.2
 python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==3.13
