--- a/.ebextensions/02_python.config
+++ b/.ebextensions/02_python.config
@@ -3,7 +3,7 @@ container_commands:
     command: "source /opt/python/run/venv/bin/activate && python superlists/manage.py migrate --noinput"
     leader_only: true
   02_collectstatic:
-  command: "source /opt/python/run/venv/bin/activate && python iotd/manage.py collectstatic --noinput"
+    command: "source /opt/python/run/venv/bin/activate && python superlists/manage.py collectstatic --noinput"
 
 option_settings:
   "aws:elasticbeanstalk:application:environment":
